2002-12-07  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.c (sp_canvas_expose): Free rects

	* src/attributes.h: Added animation-specific attributes

	* src/sp-animation.c: New file, only skeleton at moment

	* src/sp-animation.h: New file

2002-12-06  Masatake YAMATO  <jet@gyve.org>

	* tools-version.sh: print the path to the tools.

2002-12-06  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-root.c (sp_root_update): Implement

	* src/sp-rect.c (sp_rect_update): Implement
	(sp_rect_set): Request update instead of setting shape immediately

	* src/sp-item-group.c (sp_group_update): Implement

	* src/sp-object.h: Replaced ::read_attr with ::set, signature change.
	This involves modification in all subclasses as well.

	* src/attributes.h: New file. We enumerate/define all allowed attributes
	and properties, to save few string compares later.

	* src/attributes.c: New file

2002-12-04  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-object.c (sp_object_request_update): New method. We implement
	separate ::update cascade that precedes ::modified, and is meant to
	be used for building item states (styles, paths and so on). In many
	aspects it shares code path with ::modified.
	(sp_object_invoke_update): Ditto

Wed Dec  4 01:05:05 2002  Mitsuru Oka  <oka326@parkcity.ne.jp>

	* src/widget/sp-menu-button.c: Fixed to work well.

	* src/toolbox.c: enable draw buttons.
	Comment out signal_connect_after.

2002-12-03  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/sp-item.h: Replaced libart transforms and bboxes with libnr ones -
	this involves changes almost every file there.

	* src/main.c: Added POPT_AUTOHELP

2002-12-03  Masatake YAMATO  <jet@gyve.org>

	* tools-version.sh (TOOLS): Added automake-1.6 and
	aclocal-1.6. Suggested by MenTaLguY.
	(srcdir): remove version number from grep pattern.

2002-12-02  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/helper/sp-canvas.h: Made scrolling offsets integers
